docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
.recipe-feature-block {
  $recipe-feature-desktop-max-height: 460px;
  $recipe-feature-tablet-max-height: 432px;
  $recipe-feature-mobile-max-height: 211px;

  margin-bottom: 8rem;
  background-color: clr(subcolor-2);

  &__title {
    @include set-font($font-type: 'heading-font');

    text-align: center;
    color: clr(primary);
    margin-bottom: 4rem;
    font-size: 4rem;
    line-height: 4rem;
    padding-top: 5rem;
    word-wrap: break-word;
    margin-inline: 1.25rem;

    @include medium {
      font-size: 5.6rem;
      line-height: 5.6rem;
      padding-top: 6rem;
    }

    @include large {
      font-size: 6.4rem;
      line-height: 6.4rem;
      margin-bottom: 6rem;
      padding-top: 8rem;
    }
  }

  &__graphic_divider {
    text-align: center;
    margin-bottom: 40px;

    @include large {
      margin-bottom: 60px;
    }
  }

  &__border {
    position: absolute;
    left: 0;
    top: 0;
    transform: translateY(-100%) translateY($brand-border-offset);
    width: 100%;
    z-index: 2;

    @include large {
      transform: translate(-50%, -50%) rotate(-90deg) translate(-50%, -50%) translateY($brand-border-offset);
      width: $recipe-feature-desktop-max-height;
    }

    svg {
      display: block;
      width: 100%;
      height: auto;
      fill: clr(subcolor-2);
      -webkit-backface-visibility: hidden;
    }
  }

  &__wrapper {
    @include desktop {
      display: flex;
      flex-wrap: wrap;
    }

    @include larger {
      max-width: 144rem;
      margin-left: auto;
      margin-right: auto;
    }
  }

  &__media {
    position: relative;
    overflow: hidden;
    width: 100%;

    @include large {
      height: $recipe-feature-desktop-max-height;
      flex: 1;
      overflow: initial;
    }

    &__desktop-only {
      display: none;

      @include large {
        display: block;
        height: 100%;
      }
    }

    img, figure {
      width: 100%;
      height: $recipe-feature-mobile-max-height;
      object-fit: cover;

      @include medium {
        height: $recipe-feature-tablet-max-height;
      }

      @include large {
        position: absolute;
        right: 0;
        width: 59vw;
        height: 100%;
        max-width: initial;
      }
    }

    .ambient-video__control[data-state="play"] {
      @include medium {
        top: 40px;
        right: calc(5% + 40px);
      }
    }

    .ambient-video__control[data-state="pause"] {
      @include medium {
        top: 40px;
        right: calc(5% + 40px);
      }
    }

    .ambient-video__controls[data-state="mute"] {
      @include medium {
        top: 115px;
        right: calc(5% + 40px);
      }
    }

    .ambient-video__controls[data-state="unmute"] {
      @include medium {
        top: 115px;
        right: calc(5% + 40px);
      }
    }
  }

  &__info {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    text-align: center;

    @include large {
      height: $recipe-feature-desktop-max-height;
      flex: 0 1 41%;
      padding: 4rem 0;
    }

    .eyebrow {
      @include set-font($font-type: 'primary-font');

      font-size: 14px;
      line-height: 14px;
      color: clr(primary);
      text-transform: uppercase;
      margin: 0;

      @include xs {
        padding-top: 3rem;
      }

      @include medium {
        padding-top: 4rem;
      }

      @include large {
        padding-top: 0;
      }
    }

    .title {
      @include set-font($font-type: 'primary-font');

      font-size: 5.6rem;
      line-height: 100%;
      max-width: 510px;
      font-weight: 500;
      margin: 3rem auto 2rem;

      @include xs {
        padding: 0 1.2rem;
        font-size: 4rem;
      }

      @include medium {
        margin-bottom: 4rem;
        padding: 0 4rem;
      }

      @include large {
        font-size: 6.4rem;
        min-height: 18rem;
        margin: 3rem auto 4rem;
        padding: 0;
      }

      @include xl {
        font-size: 6.4rem;
        min-height: 18rem;
        margin: 4rem;
        padding: 0;
      }

      @media (min-width: 1441px){
        margin: 4rem;
        max-width: 100%;
      }

      a.link {
        color: clr(primary);
        text-decoration: none;

        @include large {
          display: block;
          margin: -10px auto -5px auto;
        }
      }
    }

    .cta-btn {
      // Removing additionalspacing which comes from space
      line-height: 0;
    }

    .default-link {
      background-color: clr(secondary);

      @include xs {
        margin-bottom: 40px;
      }

      @include medium {
        margin-bottom: 60px;
      }

      @include large {
        margin-bottom: 0;
      }

      &:hover {
        color: clr(secondary);
      }
    }
  }
}

.ambient-video .ambient-video__control[data-state="play"] .play-icon {
  fill: #fff;
}

